--- a/src/epub/text/halftitlepage.xhtml
+++ b/src/epub/text/halftitlepage.xhtml
@@ -9,7 +9,7 @@
 		<section id="halftitlepage" epub:type="halftitlepage">
 			<hgroup epub:type="fulltitle">
 				<h2 epub:type="title">When Charles the First Was King</h2>
-				<p epub:type="subtitle">A Romance of Osgoldcross, 1632–1649</p>
+				<p epub:type="subtitle">A Romance of Osgoldcross, 1632⁠–⁠1649</p>
 			</hgroup>
 		</section>
 	</body>
