[Editorial] Market-Place -> Marketplace; c14, toc

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -56,7 +56,7 @@
 							<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: Of Philip Lisle’s Call to Arms</a>
 						</li>
 						<li>
-							<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: Of the Disturbance in Pontefract Market- Place</a>
+							<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: Of the Disturbance in Pontefract Marketplace</a>
 						</li>
 						<li>
 							<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: Of Our Escape from the Magistrate’s Custody</a>
