--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -21,9 +21,9 @@
 			and is based on digital scans from<br/>
 			<a href="https://standardebooks.org/ebooks/j-s-fletcher/when-charles-the-first-was-king#page-scans">various sources</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
-			a painting completed in <time>YEAR</time> by<br/>
-			<a href="COVER_ARTIST_WIKI_URL">COVER_ARTIST</a>.<br/>
+			<i epub:type="se:name.visual-art.painting">To the Rescue: An Episode of the Civil War</i>,<br/>
+			a painting completed in <time>1896</time> by<br/>
+			<a href="https://en.wikipedia.org/wiki/Ernest_Crofts">Ernest Crofts</a>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in <time>2014</time> and <time>2009</time> by<br/>
